--- a/Teaching/ISIS2503/labs/lab01/mueblesdelosalpes/mueblesdelosalpes.backend/pom.xml
+++ b/Teaching/ISIS2503/labs/lab01/mueblesdelosalpes/mueblesdelosalpes.backend/pom.xml
@@ -21,6 +21,11 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-servlet</artifactId>
+            <version>1.13</version>
+        </dependency>
     </dependencies>
 
     <build>
