New files structures

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Courses/2016-10/Image processing/ImageJ/plugins/Color
 Courses/2016-10/Image processing/ImageJ/plugins/Filters
 Courses/2016-10/Image processing/ImageJ/plugins/README.txt
 Courses/2016-10/Image processing/ImageJ/plugins/Tools
+Courses/2016-10/Image processing/ImageJ/plugins/DIP/*.class
